# cmcode

./: .env.example  README.md  model.py  poem.txt  pyproject.toml  system-prompt.md  test.js
cmcode/: __init__.py  cli.py  config.py  core.py  tools.py
